# embedded-rts

./: .gitignore  README.md  State.cpp
ann/: CMakeLists.txt
ann/python/: hgen.py  mlp_mnist.ipynb
ann/python/models/: 2_layer_mlp.hdf5  mpl_3_layers_32.hdf5
ann/src/: asserts.c  asserts.cpp  asserts.h  digit_classifier.cpp  layer.c  layer.h  main.c  neural_network.c  neural_network.h  neuron.c  neuron.cpp
ann/src/data/: test_data.csv
ann/src/models/: nn_3_layers_32_neurons.h  nn_simple_1.h
ann/src/tests/: layer_tests.h  neural_network_tests.h  neuron_tests.h  runner.c  runner.cpp
annfp/src/: layer.h  main.c  neural_network.c
assignment-1/: AvalonSTAdapter.h  AvalonSTAdapterVCD.vcd  AvalonSourceSinkVCD.vcd  AvalonStreamingBus.h  CMakeLists.txt  ModuleDouble.h  ModuleSingle.h  ProducerConsumer.h  main.cpp
assignment-2/: main.c  matrix.h
assignment-2/advios_hls/: advios.cpp  advios.h  advios_driver.h  tb_advios.cpp
assignment-2/advios_sdk/: main.cc
assignment-3/: State.h  lab1.xpr
assignment-3/lab1.sdk/: system_wrapper.hdf
assignment-4/: assignment4.eap  lab2.xpr  vivado.jou  vivado_2548.backup.jou  vivado_6424.backup.jou
assignment-4/figures/: assignment4.eap
assignment-4/lab2.sdk/: system_wrapper.hdf
assignment-4/src/: UserThread.h
examples/ADCInput/: .cproject
examples/AlgoBlock/: .cproject  AlgoWave.vcd
examples/Buttons/: .cproject  DebounceWave.vcd
examples/Gas_station/: .cproject
examples/LAVMU_Model/: .cproject
examples/LMSFilter/: .cproject
examples/SimpleFifo/: .cproject
examples/SmartPitchDetector/: .cproject
examples/TemplateFir/: .cproject  mix_file.txt
exercises/MultiplierAdder/: .cproject  .project  CMakeLists.txt  WaveForm.vcd  mac.h  monitor.h  stimulus.h  top.h
exercises/buffer_ex/: .cproject
exercises/danger_ex/: .cproject
exercises/datatypes/: .cproject  datatypes.cpp
exercises/equalizer_ex/: .cproject
exercises/fifo_fir/: .cproject
exercises/gas_station/: .cproject
exercises/method_delay/: .cproject
exercises/mutex_ex/: .cproject
exercises/simple_process_ex/: .cproject  CMakeLists.txt  main.cpp  simple_process_ex.cpp  simple_process_ex.h
project/: .gitignore  zybo_project_create.tcl
(+2197 files in other folders)
